<resources>
    <string name="app_name">蜗牛</string>
    <string name="open">打开抽屉</string>
    <string name="close">关闭抽屉</string>

    <string name="running_show_time">00:00:00</string>
    <string name="running_show_distance">0.00</string>
    <string name="running_label_time">时长</string>
    <string name="running_label_distance">距离（公里）</string>
    <string name="detail_label_speed">平均时速</string>
    <string name="running_start_locate">开始</string>
    <string name="running_pause_locate">暂停</string>
    <string name="running_stop_locate">结束</string>
    <string name="detail_distance_unit">公里</string>
    <string name="detail_calorie_unit">卡路里</string>
    <string name="set_weight">你的体重（kg）:</string>
    <string name="app_version">Version:1.0</string>
    <string name="app_declaration">探索跑步的乐趣</string>
    <string name="about_github">Github:</string>
    <string name="about_weibo">新浪微博:</string>
    <string name="user_profile_name">昵称</string>
    <string name="user_profile_click_to_change">点击头像进行更换</string>
    <string name="user_profile_weight">体重(kg)</string>
    <string name="e_mail">E-mail</string>
    <string name="btn_confirm">确认</string>
    <string name="password">密码</string>
    <string name="hint_no_account">没有账号？</string>
    <string name="login">登录</string>
    <string name="hint_has_account">已有账号？</string>
    <string name="btn_finish_reg">完成注册</string>
    <string name="statistics_info">统计信息</string>
    <string name="average_speed">平均速度：</string>
    <string name="average_time">平均时长：</string>
    <string name="longest_time">最久时长：</string>
    <string name="longest_distance">最远距离：</string>
    <string name="init_distance">0.00km</string>
    <string name="init_time">00:00:00</string>
    <string name="init_speed">0km/h</string>
    <string name="last_10_record">最近10次跑步记录</string>
    <string name="total_distance">总里程</string>
    <string name="init_0_00">0.00</string>
    <string name="km">公里</string>
    <string name="init_0">0</string>
    <string name="count">次数</string>
    <string name="total_time">总时间(小时)</string>
    <string name="username">用户名</string>
    <string name="location">地点</string>
    <string name="logout">注销</string>
    <string name="main_page">首页</string>
    <string name="user_record">用户记录</string>
    <string name="data_analysis">数据统计</string>
    <string name="run_circle">跑步圈</string>
    <string name="switch_theme">切换主题</string>
    <string name="about">关于</string>
    <string name="version">Version:</string>
    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="time_format">HH:mm:ss</string>
    <string name="min_format">mm:ss</string>
    <string name="date_hour_format">yyyy-MM-dd HH时</string>
    <string name="hour_min_format">yyyy年MM月dd日 HH:mm</string>
    <string name="month_day_format">MM月dd日</string>
    <string name="network_unconnect">网络未连接~</string>
    <string name="gps_warning">必须开启GPS才能使功能正常运行，是否开启？</string>
    <string name="dont_offer">不开启</string>
    <string name="go_offer">前往开启</string>
    <string name="login_please">请登陆</string>
    <string name="weight_cant_null">体重不能为空！</string>
    <string name="please_input_20_200_weight">请输入20~200之间的数</string>
    <string name="login_success">登陆成功</string>
    <string name="login_failed_network_error">登录失败~网络错误</string>
    <string name="email_format_error">E-mail格式不合法</string>
    <string name="password_format_error">密码格式不合法</string>
    <string name="reg">注册</string>
    <string name="name_format_error">昵称格式不合法</string>
    <string name="reg_failed_network_error">注册失败~网络错误</string>
    <string name="reg_failed_email_had_been_token">注册失败~E-mail已被占用</string>
    <string name="reg_success">注册成功</string>
    <string name="refresh_failed_network">网络错误，刷新失败...</string>
    <string name="refresh_failed_reason">刷新失败，</string>
    <string name="load_failed_reason">加载失败，</string>
    <string name="no_more">没有更多了</string>
    <string name="load_failed_network">网络错误，加载失败...</string>
    <string name="sync_records">同步记录</string>

</resources>
