<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawer_menu_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_white_48dp"
            android:title="@string/main_page"/>
        <item
            android:id="@+id/start_run"
            android:icon="@drawable/ic_dns_white_48dp"
            android:title="@string/user_record"/>
        <item
            android:id="@+id/data_statistics"
            android:icon="@drawable/ic_equalizer_white_48dp"
            android:title="@string/data_analysis"/>
        <item
            android:id="@+id/run_circle"
            android:icon="@drawable/ic_people_white_48dp"
            android:title="@string/run_circle"/>
    </group>
    <group
        android:id="@+id/drawer_menu_group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/night_mode_switch"
            android:title="@string/switch_theme"/>
        <item
            android:id="@+id/abouts"
            android:title="@string/about"/>
    </group>

</menu>